--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -13,5 +13,5 @@ android {
 
 dependencies {
     compile "com.android.support:appcompat-v7:$ANDROID_SUPPORT_VERSION"
-    compile project(":library")
+    compile project(":library:core")
 }
