added fake GsonCoder, gradle scripts

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,11 @@ ROBOLECTRIC_VERSION=3.3.2
 MOCKITO_VERSION=2.7.20
 JUNIT_VERSION=4.12
 RANDOM_BEANS_VERSION=3.6.0
+GSON_VERSION=2.8.0
+# Bintray common configs
+BINTRAY_LIB_REPO_NAME=ouroboros
+BINTRAY_LIB_NAME=Ouroboros
+BINTRAY_LIB_DESCRIPTION=A library that can save and restore the state of Android components easily.
+BINTRAY_LIB_SITE_URL=https://github.com/Fondesa/Ouroboros
+BINTRAY_LIB_GIT_URL=https://github.com/Fondesa/Ouroboros.git
+BINTRAY_LIB_VERSION=0.0.1-a1
