--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -13,6 +13,10 @@ android {
 
 dependencies {
     compile "com.android.support:appcompat-v7:$ANDROID_SUPPORT_VERSION"
+
     compile project(':ouroboros')
     compile project(':ouroboros-coder-gson')
+
+//    compile 'com.github.fondesa:ouroboros-core:0.0.1-a1'
+//    compile 'com.github.fondesa:ouroboros-coder-gson:0.0.1-a1'
 }
