--- a/ouroboros-coder-gson/build.gradle
+++ b/ouroboros-coder-gson/build.gradle
@@ -12,16 +12,12 @@ android {
 }
 
 dependencies {
-    testCompile "junit:junit:$JUNIT_VERSION"
-    testCompile "org.mockito:mockito-core:$MOCKITO_VERSION"
-    testCompile "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
-    testCompile "io.github.benas:random-beans:$RANDOM_BEANS_VERSION"
+    testCompile project(':ouroboros-shared-test')
+
+    compile project(':ouroboros')
+//    compile "com.github.fondesa:ouroboros:$BINTRAY_LIB_VERSION"
 
     compile "com.google.code.gson:gson:$GSON_VERSION"
-
-//    compile "com.github.fondesa:ouroboros:$BINTRAY_LIB_VERSION"
-    compile project(':ouroboros')
 }
 
-apply from: "${rootDir}/gradle/scripts/pom_generator.gradle"
-apply from: "${rootDir}/gradle/scripts/bintray_uploader.gradle"
+apply from: "${rootDir}/gradle/scripts/bintray-deployer.gradle"
