added publish library task, refactor travis file, removed dcendents gradle plugin

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ branches:
     - master
 
 script:
+  - ./gradlew :ouroboros-shared-test:build --continue --stacktrace
   - ./gradlew :ouroboros:build --continue --stacktrace
   - ./gradlew :ouroboros-coder-gson:build --continue --stacktrace
   - ./gradlew :sample:assembleLocal --continue --stacktrace
