--- a/gradle/scripts/bintray-deployer.gradle
+++ b/gradle/scripts/bintray-deployer.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'maven-publish'
 
 // Android libraries
 task sourcesJar(type: Jar) {
@@ -26,41 +26,86 @@ artifacts {
 group = project.hasProperty("BINTRAY_COMMON_GROUP_ID") ? BINTRAY_COMMON_GROUP_ID : ""
 version = BINTRAY_LIB_VERSION
 
-install {
-    repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
-        pom {
-            project {
-                packaging 'aar'
-                groupId project.hasProperty("BINTRAY_COMMON_GROUP_ID") ? BINTRAY_COMMON_GROUP_ID : ""
-                artifactId BINTRAY_LIB_ARTIFACT_ID
+// Create the pom configuration:
+def pomConfig = {
+    packaging 'aar'
+    groupId project.hasProperty("BINTRAY_COMMON_GROUP_ID") ? BINTRAY_COMMON_GROUP_ID : ""
+    artifactId BINTRAY_LIB_ARTIFACT_ID
 
-                name BINTRAY_LIB_NAME
-                description BINTRAY_LIB_DESCRIPTION
-                version BINTRAY_LIB_VERSION
-                url BINTRAY_LIB_SITE_URL
+    name BINTRAY_LIB_NAME
+    description BINTRAY_LIB_DESCRIPTION
+    version BINTRAY_LIB_VERSION
+    url BINTRAY_LIB_SITE_URL
 
-                // Set your license
-                licenses {
-                    license {
-                        url project.hasProperty("BINTRAY_COMMON_LICENSE_URL") ? BINTRAY_COMMON_LICENSE_URL : ""
+    // Set your license
+    licenses {
+        license {
+            url project.hasProperty("BINTRAY_COMMON_LICENSE_URL") ? BINTRAY_COMMON_LICENSE_URL : ""
+        }
+    }
+    developers {
+        developer {
+            id project.hasProperty("BINTRAY_COMMON_DEV_ID") ? BINTRAY_COMMON_DEV_ID : ""
+            name project.hasProperty("BINTRAY_COMMON_DEV_NAME") ? BINTRAY_COMMON_DEV_NAME : ""
+            email project.hasProperty("BINTRAY_COMMON_DEV_MAIL") ? BINTRAY_COMMON_DEV_MAIL : ""
+        }
+    }
+    scm {
+        connection BINTRAY_LIB_GIT_URL
+        developerConnection BINTRAY_LIB_GIT_URL
+        url BINTRAY_LIB_SITE_URL
+    }
+}
+
+// Create the publication with the pom configuration:
+publishing {
+    publications {
+        ouroborosPublication(MavenPublication) {
+            artifact sourcesJar
+            artifact javadocJar
+            artifact("$buildDir/outputs/aar/${project.name}-release.aar")
+
+            groupId project.hasProperty("BINTRAY_COMMON_GROUP_ID") ? BINTRAY_COMMON_GROUP_ID : ""
+            artifactId BINTRAY_LIB_ARTIFACT_ID
+            version BINTRAY_LIB_VERSION
+
+            pom.withXml {
+                def root = asNode()
+                root.children().last() + pomConfig
+
+                def dependenciesNode = asNode().appendNode('dependencies')
+
+                // List all compile dependencies and write to POM
+                configurations.compile.getAllDependencies().each { Dependency dep ->
+                    if (dep.group == null || dep.version == null)
+                        return // ignore invalid dependencies
+
+                    def dependencyVersion = dep.name
+                    if (dependencyVersion == null || dependencyVersion == "unspecified")
+                        dependencyVersion = $BINTRAY_LIB_VERSION
+
+                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                    dependencyNode.appendNode('groupId', dep.group)
+                    dependencyNode.appendNode('artifactId', dependencyVersion)
+                    dependencyNode.appendNode('version', dep.version)
+
+                    if (!dep.transitive) {
+                        // If this dependency is transitive, we should force exclude all its dependencies them from the POM
+                        def exclusionNode = dependencyNode.appendNode('exclusions').appendNode('exclusion')
+                        exclusionNode.appendNode('groupId', '*')
+                        exclusionNode.appendNode('artifactId', '*')
+                    } else if (!dep.properties.excludeRules.empty) {
+                        // Otherwise add specified exclude rules
+                        def exclusionsNode = dependencyNode.appendNode('exclusions')
+                        dep.properties.excludeRules.each { ExcludeRule rule ->
+                            def exclusionNode = exclusionsNode.appendNode('exclusion')
+                            exclusionNode.appendNode('groupId', rule.group ?: '*')
+                            exclusionNode.appendNode('artifactId', rule.module ?: '*')
+                        }
                     }
-                }
-                developers {
-                    developer {
-                        id project.hasProperty("BINTRAY_COMMON_DEV_ID") ? BINTRAY_COMMON_DEV_ID : ""
-                        name project.hasProperty("BINTRAY_COMMON_DEV_NAME") ? BINTRAY_COMMON_DEV_NAME : ""
-                        email project.hasProperty("BINTRAY_COMMON_DEV_MAIL") ? BINTRAY_COMMON_DEV_MAIL : ""
-                    }
-                }
-                scm {
-                    connection BINTRAY_LIB_GIT_URL
-                    developerConnection BINTRAY_LIB_GIT_URL
-                    url BINTRAY_LIB_SITE_URL
                 }
             }
-        }.writeTo("$buildDir/poms/pom-default.xml")
-//        }
+        }
     }
 }
 
@@ -68,7 +113,7 @@ bintray {
     user = project.hasProperty("BINTRAY_COMMON_USERNAME") ? BINTRAY_COMMON_USERNAME : ""
     key = project.hasProperty("BINTRAY_COMMON_APIKEY") ? BINTRAY_COMMON_APIKEY : ""
 
-    configurations = ['archives']
+    publications = ['ouroborosPublication']
     pkg {
         repo = project.hasProperty("BINTRAY_COMMON_REPO") ? BINTRAY_COMMON_REPO : ""
         name = BINTRAY_LIB_REPO_NAME
@@ -88,9 +133,53 @@ bintray {
     }
 }
 
-bintrayUpload {
-    dependsOn 'clean'
-    dependsOn 'build'
-    dependsOn 'javadocJar'
-    dependsOn 'sourcesJar'
+def addTaskToMap = { taskMap, taskName ->
+    taskMap.put(taskName, tasks.findByName(taskName) != null)
+}
+
+final def TASK_BINTRAY = "bintrayUpload"
+final def TASK_CLEAN = "clean"
+final def TASK_ASSEMBLE = "assembleRelease"
+final def TASK_SOURCES = "sourcesJar"
+final def TASK_JAVADOC = "javadocJar"
+final def TASK_POM = "generatePomFileForOuroborosPublicationPublication"
+
+def taskMap = new HashMap<String, Boolean>()
+addTaskToMap(taskMap, TASK_BINTRAY)
+addTaskToMap(taskMap, TASK_CLEAN)
+addTaskToMap(taskMap, TASK_ASSEMBLE)
+addTaskToMap(taskMap, TASK_SOURCES)
+addTaskToMap(taskMap, TASK_JAVADOC)
+addTaskToMap(taskMap, TASK_POM)
+
+tasks.whenTaskAdded { task ->
+    def taskName = task.name
+    def mapTaskInserted = taskMap.get(taskName)
+    if (mapTaskInserted != null && !mapTaskInserted) {
+        taskMap.put(taskName, true)
+        println("Inserted: $taskName")
+        def allInserted = true
+        for (Map.Entry<String, Boolean> entry : taskMap.entrySet()) {
+            allInserted = entry.value
+            if (!allInserted)
+                break
+        }
+        if (allInserted) {
+            def newTask = project.task("publishLibrary")
+            newTask.group = "publishing"
+
+            newTask.dependsOn(TASK_CLEAN)
+            newTask.dependsOn(TASK_ASSEMBLE)
+            newTask.dependsOn(TASK_SOURCES)
+            newTask.dependsOn(TASK_JAVADOC)
+            newTask.dependsOn(TASK_POM)
+
+            tasks.findByName(TASK_ASSEMBLE).mustRunAfter TASK_CLEAN
+            tasks.findByName(TASK_SOURCES).mustRunAfter TASK_ASSEMBLE
+            tasks.findByName(TASK_JAVADOC).mustRunAfter TASK_SOURCES
+            tasks.findByName(TASK_POM).mustRunAfter TASK_JAVADOC
+
+            newTask.finalizedBy TASK_BINTRAY
+        }
+    }
 }
