--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -16,6 +16,8 @@ android {
     }
 }
 
+final def ouroborosMavenCompileVersion = "0.0.1-a2"
+
 dependencies {
     compile "com.android.support:appcompat-v7:$ANDROID_SUPPORT_VERSION"
     compile "com.android.support:support-v4:$ANDROID_SUPPORT_VERSION"
@@ -23,6 +25,6 @@ dependencies {
     localCompile project(':ouroboros')
     localCompile project(':ouroboros-coder-gson')
 
-    mavenCompile 'com.github.fondesa:ouroboros:0.0.1-a2'
-    mavenCompile 'com.github.fondesa:ouroboros-coder-gson:0.0.1-a2'
+    mavenCompile "com.github.fondesa:ouroboros:$ouroborosMavenCompileVersion"
+    mavenCompile "com.github.fondesa:ouroboros-coder-gson:$ouroborosMavenCompileVersion"
 }
