--- a/ouroboros-shared-test/build.gradle
+++ b/ouroboros-shared-test/build.gradle
@@ -1,19 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: AndroidCommonPlugin
 
-android {
-    compileSdkVersion Integer.parseInt(ANDROID_COMPILE_SDK_VERSION)
-    buildToolsVersion ANDROID_BUILD_TOOLS_VERSION
-
-    defaultConfig {
-        minSdkVersion Integer.parseInt(ANDROID_MIN_SDK_VERSION)
-        targetSdkVersion Integer.parseInt(ANDROID_TARGET_SDK_VERSION)
-        return true
-    }
-
-    lintOptions {
-        disable 'InvalidPackage'
-    }
-}
+android.lintOptions.disable 'InvalidPackage'
 
 dependencies {
     compile "junit:junit:$JUNIT_VERSION"
