--- a/ouroboros/src/test/resources/robolectric.properties
+++ b/ouroboros/src/test/resources/robolectric.properties
@@ -1,5 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
-# Config file used by Robolectric to set its global configs.
+# Configuration file used by Robolectric to set its global configs.
 manifest=--none
 # Robolectric hasn't support below api 16.
 minSdk=16
