--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,14 +1,8 @@
 apply plugin: 'com.android.application'
+apply plugin: AndroidCommonPlugin
 
 android {
-    compileSdkVersion Integer.parseInt(ANDROID_COMPILE_SDK_VERSION)
-    buildToolsVersion ANDROID_BUILD_TOOLS_VERSION
-
-    defaultConfig {
-        applicationId "com.fondesa.ouroboros.sample"
-        minSdkVersion Integer.parseInt(ANDROID_MIN_SDK_VERSION)
-        targetSdkVersion Integer.parseInt(ANDROID_TARGET_SDK_VERSION)
-    }
+    defaultConfig.applicationId "com.fondesa.ouroboros.sample"
 
     productFlavors {
         local
