--- a/ouroboros/build.gradle
+++ b/ouroboros/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: AndroidCommonPlugin
+//apply plugin: BintrayDeployerPlugin
 
 dependencies {
     testCompile project(':ouroboros-shared-test')
