Gradle plugins and automation of builds

--- a/android-config.properties
+++ b/android-config.properties
@@ -1,5 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
-# Configuration file for Android extension in Gradle build
+# Android sdk common configurations
 COMPILE_SDK=25
 BUILD_TOOLS=25.0.2
 MIN_SDK=9
