--- a/bintray-deploy.properties
+++ b/bintray-deploy.properties
@@ -6,4 +6,6 @@ BINTRAY_LIB_DESCRIPTION=A library that can save and restore the state of Android
 BINTRAY_LIB_SITE_URL=https://github.com/Fondesa/Ouroboros
 BINTRAY_LIB_ISSUE_TRACKER_URL=https://github.com/Fondesa/Ouroboros/issues
 BINTRAY_LIB_GIT_URL=https://github.com/Fondesa/Ouroboros.git
+BINTRAY_LIB_GITHUB_REPO=Fondesa/Ouroboros
+BINTRAY_LIB_TAGS=android|ouroboros|saveinstancestate|bundle
 BINTRAY_LIB_VERSION=0.0.1-a3
