new deploy script

--- a/ouroboros/bintray-deploy.properties
+++ b/ouroboros/bintray-deploy.properties
@@ -1,3 +1,4 @@
 # suppress inspection "UnusedProperty" for whole file
 # Bintray module configurations
 BINTRAY_LIB_ARTIFACT_ID=ouroboros
+BINTRAY_LIB_NAME=ouroboros
