lint manifest and api key

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
+        <activity android:name=".BaseMainActivity" />
+
         <activity android:name="com.fondesa.lyra.sample.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
