Sample in kotlin, properties name changed

--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$ANDROID_PLUGIN"
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$BINTRAY_PLUGIN"
+        classpath "com.android.tools.build:gradle:$ANDROID_PLUGIN_VERSION"
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$BINTRAY_PLUGIN_VERSION"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
     }
 }
 
