--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 # Buildscript dependencies
-ANDROID_PLUGIN=2.3.1
-BINTRAY_PLUGIN=1.7.3
+ANDROID_PLUGIN_VERSION=2.3.1
+BINTRAY_PLUGIN_VERSION=1.7.3
+# Kotlin dependency
+KOTLIN_VERSION=1.1.2-2
 # Project dependencies
 ANDROID_SUPPORT_VERSION=25.3.1
 ROBOLECTRIC_VERSION=3.3.2
