--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,24 +7,16 @@ new AndroidSharedPlugin(
                 local
                 maven
             }
-
-            buildTypes {
-                debug {
-                    debuggable true
-                }
-
-                proguardDebug {
-                    debuggable true
-                    minifyEnabled true
-                    proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-                }
-            }
         }
 ).apply(project)
+
+apply plugin: 'kotlin-android'
 
 final def libraryMavenCompileVersion = "1.0.1"
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$KOTLIN_VERSION"
+
     compile "com.android.support:appcompat-v7:$ANDROID_SUPPORT_VERSION"
     compile "com.android.support:support-v4:$ANDROID_SUPPORT_VERSION"
 
