--- a/sample/sample-java/src/main/AndroidManifest.xml
+++ b/sample/sample-java/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-        <activity android:name=".BaseMainActivity" />
+        <activity android:name=".activity.BaseMainActivity" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
