--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ include ':lyra'
 include ':lyra-coder-gson'
 include ':lyra-shared-test'
 include ':sample'
+include ':sample:sample-java'
+include ':sample:sample-kotlin'
